Hope this works

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -97,6 +97,7 @@ jobs:
         $headers = @{
           "Authorization" = "Bot $env:DISCORD_BOT_TOKEN"
           "Content-Type"  = "multipart/form-data"
+          "User-Agent"    = "Mozilla/5.0 (Windows NT 10.0; Win64; x64)"
         }
 
         $contentJson = @{
@@ -144,6 +145,7 @@ jobs:
         $headers = @{
           "Authorization" = "Bot $env:DISCORD_BOT_TOKEN"
           "Content-Type"  = "application/json"
+          "User-Agent"    = "Mozilla/5.0 (Windows NT 10.0; Win64; x64)"
         }
 
         $body = @{
